# hyperliquid-bot-updated-strategy

./: .env.example  .gitignore  ARCHITECTURE_INVARIANCE_REPORT.md  ARTIFACT_MANIFEST.txt  BASELINE_REPORT.md  BUILD_REPORT.md  CHANGELOG.md  LICENSE  MODIFICATION_SCOPE_REPORT.md  README.md  STRATEGY_IMPLEMENTATION_MATRIX.md  candidate_upgrade.py  dashboard_forecast_cache.py  db_init.py  db_utils.py  decision_gate.py  decision_guard.py  entry_quality_policy.py  execution_audit.py  execution_policy.py  external_close_reconciliation.py  forecaster.py  formatted_system_prompt.txt  hyperliquid_trader.py  indicators.py  leverage_policy.py  main.py  news_feed.py  news_sentiment_shadow.py  news_sentiment_shadow_report.sql  performance_observability.py  position_management.py  pre_trade_revalidation.py  profit_protection_overlay.py  prophet_shadow.py  railway.json  requirements.txt  runtime_config.py  sentiment.py  severe_weakness_shadow.py  (+11 more)
v2/: .dockerignore  Dockerfile  README.md  pyproject.toml  railway.json
v2/config/: env.example  experimental_policy.json  immutable_invariants.json  models.example.json  shadow_policy.json
v2/docs/: ARCHITECTURE.md
v2/n8n/: supervisor-workflow.json
v2/railway/: DEPLOYMENT_RUNBOOK.md  SERVICE_LAYOUT.md  bootstrap_v2_shadow.sh
v2/schemas/: decision_packet.schema.json  llm_decision.schema.json  v2_schema.sql
v2/tests/: test_failed_breakout.py  test_features.py  test_model_router.py  test_opportunity.py  test_position_guardian.py  test_providers.py  test_quant_expert.py  test_settings.py  test_supervisor_model.py  test_tracker.py  (+1 more)
(+71 files in other folders)
