[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperliquid-bot-v2"
version = "0.2.0"
description = "Operational shadow-first, lifecycle-aware Hyperliquid trading architecture"
requires-python = ">=3.12"
dependencies = [
  "asyncpg>=0.30,<1",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "uvicorn[standard]>=0.34,<1",
  "websockets>=14,<16",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.25"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
